// ============================================================================
// /asset/intelligent-asset-health-service (版本 2.0)
// 描述: 集成物联网(IoT)传感器数据，监控资产健康状况，并预测潜在故障。
// ============================================================================

syntax = "proto3";

package am.ah.v1;

option go_package = "github.com/enterprise/erp/protos/am/ah;ah";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: IntelligentAssetHealthService
// ============================================================================

service IntelligentAssetHealthService {
  // 接收资产的传感器数据 - 异步
  rpc IngestSensorData(IngestSensorDataRequest) returns (common.v1.JobInfo) {

    option (google.api.http) = {

      post: "/api/v1/asset/ingest-sensor-data"

      body: "*"

    };

  }

  // 获取资产的当前健康状态
  rpc GetAssetHealthStatus(GetAssetHealthStatusRequest) returns (AssetHealthStatus) {


    option (google.api.http) = {


      get: "/api/v1/asset/asset-health-status"


    };


  }

  // 获取资产的预测性维护建议
  rpc GetPredictiveMaintenanceAlerts(GetPredictiveMaintenanceAlertsRequest) returns (GetPredictiveMaintenanceAlertsResponse) {


    option (google.api.http) = {


      get: "/api/v1/asset/predictive-maintenance-alerts"


    };


  }
  
  // 查询历史传感器数据 (New)
  rpc ListSensorData(ListSensorDataRequest) returns (ListSensorDataResponse) {

  
    option (google.api.http) = {

  
      get: "/api/v1/asset/sensor-data"

  
    };

  
  }
  
  // 创建资产健康模型 (New)
  rpc CreateHealthModel(CreateHealthModelRequest) returns (HealthModelResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/asset/health-model"

  
      body: "*"

  
    };

  
  }
}

// ============================================================================
// 数据结构: AssetHealth (资产健康)
// ============================================================================

// 传感器数据点
message SensorDataPoint {
  string sensor_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string value = 3;
  string unit = 4;
}

// 资产健康状态
message AssetHealthStatus {
  string equipment_number = 1;
  int32 overall_health_score = 2; // 0-100
  common.v1.HealthStatus status_description = 3;
  string remaining_useful_life = 4;
  google.protobuf.Timestamp last_updated = 5;
}

// 预测性维护警报
message PredictiveMaintenanceAlert {
  string alert_id = 1;
  string equipment_number = 2;
  common.v1.FailureMode predicted_failure_mode = 3;
  string recommended_action = 4;
  double confidence_score = 5;
  google.protobuf.Timestamp alert_time = 6;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 接收传感器数据请求
message IngestSensorDataRequest {
  string equipment_number = 1;
  repeated SensorDataPoint data_points = 2;
  common.v1.RequestContext context = 99;
}

// 获取资产健康状态请求
message GetAssetHealthStatusRequest {
  string equipment_number = 1;
  common.v1.RequestContext context = 99;
}

// 获取预测性维护警报请求
message GetPredictiveMaintenanceAlertsRequest {
  string equipment_number = 1;
  string severity_level = 2;
  common.v1.RequestContext context = 99;
}

message GetPredictiveMaintenanceAlertsResponse {
  repeated PredictiveMaintenanceAlert alerts = 1;
}

message ListSensorDataRequest {
  string equipment_number = 1;
  string sensor_id = 2;
  common.v1.DateRange date_range = 3;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListSensorDataResponse {
  repeated SensorDataPoint data_points = 1;
  common.v1.PaginationResponse pagination = 2;
}

message CreateHealthModelRequest {
  string equipment_number = 1;
  string model_type = 2; // e.g. "LinearRegression", "NeuralNet"
  repeated string features = 3;
  common.v1.RequestContext context = 99;
}

message HealthModelResponse {
  bool success = 1;
  string model_id = 2;
  repeated common.v1.ApiMessage messages = 3;
}
